--- a/Desert_Order/package.json
+++ b/Desert_Order/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
